- 기본 레이아웃 1차 작업 완료

--- a/assets/lib/css/uk.css
+++ b/assets/lib/css/uk.css
@@ -3049,20 +3049,32 @@ body {
 .desktop.hd_search_on .uk_header {
   right: 17px;
 }
-.desktop.hd_assetsLink_on.opera,
-.desktop.hd_search_on.opera {
+.desktop.hd_assetsLink_on.md_state .side_menu_area.fixed .side_menu,
+.desktop.hd_search_on.md_state .side_menu_area.fixed .side_menu {
+  right: 17px;
+}
+.desktop.hd_assetsLink_on.opera body,
+.desktop.hd_search_on.opera body {
   margin-right: 15px;
 }
 .desktop.hd_assetsLink_on.opera .uk_header,
 .desktop.hd_search_on.opera .uk_header {
   right: 15px;
 }
-.desktop.hd_assetsLink_on.edge,
-.desktop.hd_search_on.edge {
+.desktop.hd_assetsLink_on.opera.md_state .side_menu_area.fixed .side_menu,
+.desktop.hd_search_on.opera.md_state .side_menu_area.fixed .side_menu {
+  right: 15px;
+}
+.desktop.hd_assetsLink_on.edge body,
+.desktop.hd_search_on.edge body {
   margin-right: 16px;
 }
 .desktop.hd_assetsLink_on.edge .uk_header,
 .desktop.hd_search_on.edge .uk_header {
+  right: 16px;
+}
+.desktop.hd_assetsLink_on.edge.md_state .side_menu_area.fixed .side_menu,
+.desktop.hd_search_on.edge.md_state .side_menu_area.fixed .side_menu {
   right: 16px;
 }
 /*
@@ -4521,7 +4533,8 @@ body {
 }
 @media (max-width: 767px) {
   .sub_top {
-    padding: 60px 0 20px;
+    padding: 50px 0 0;
+    border: 0;
   }
   .sub_top .tit {
     line-height: 36px;
@@ -4536,15 +4549,15 @@ body {
     z-index: -1;
     transform: translate(-50%, 0);
     height: 0;
-    border-left: 80px solid transparent;
-    border-right: 80px solid transparent;
+    border-left: 90px solid transparent;
+    border-right: 90px solid transparent;
     border-top: 36px solid #eee;
     background: transparent;
   }
   .sub_top .top_link ul {
     left: 0;
     right: 0;
-    top: 13px;
+    top: 8px;
   }
   .sub_top .top_link ul li {
     padding-left: 2px;
@@ -4581,10 +4594,6 @@ body {
   clear: both;
   content: "";
 }
-.content_area {
-  float: right;
-  width: calc(100% - (250px + 60px));
-}
 .side_menu_area {
   float: left;
   width: 250px;
@@ -4595,7 +4604,7 @@ body {
 }
 .side_menu_area .tit {
   line-height: 130%;
-  padding-bottom: 10px;
+  padding: 4px 0 10px;
   font-family: 'Open Sans', 'Noto Sans KR', 'Malgun Gothic', 'Dotum', sans-serif;
   font-size: 18px;
   color: #777;
@@ -4612,7 +4621,7 @@ body {
   font-weight: 800;
 }
 .side_menu_area li {
-  line-height: 18px;
+  line-height: 20px;
   font-size: 14px;
   color: #888;
 }
@@ -4640,11 +4649,10 @@ body {
 }
 .side_menu_area .side_menu {
   position: relative;
-  overflow: hidden;
-  margin-top: 30px;
+  margin-top: 20px;
 }
 .side_menu_area .side_menu > ol > li {
-  padding-bottom: 10px;
+  padding-bottom: 8px;
 }
 .side_menu_area .side_menu > ol > li > a,
 .side_menu_area .side_menu > ol > li > ol {
@@ -4673,8 +4681,13 @@ body {
   border-bottom: 6px solid #1e73ff;
 }
 .side_menu_area .side_d2 {
+  *zoom: 1;
   display: none;
-  padding-bottom: 5px;
+}
+.side_menu_area .side_d2:after {
+  display: block;
+  clear: both;
+  content: "";
 }
 .side_menu_area .side_d2:before {
   display: block;
@@ -4702,7 +4715,7 @@ body {
   font-weight: 400;
 }
 .side_menu_area .side_d2 li .html5 {
-  margin: 3px 0 0 4px;
+  margin: 4px 0 0 4px;
   font-size: 0;
 }
 .side_menu_area .side_d2 li .html5:before {
@@ -4741,30 +4754,519 @@ body {
 .side_menu_area .on .side_d2 {
   display: block;
 }
+.content_area {
+  float: right;
+  width: calc(100% - (250px + 60px));
+}
 @media (max-width: 993px) {
-  .content_area,
-  .side_menu_area {
+  .sub_content {
+    padding-top: 25px;
+  }
+  .side_menu_area,
+  .content_area {
     float: none;
     width: auto;
   }
   .side_menu_area {
+    position: static;
+    min-height: 80px;
+  }
+  .side_menu_area .tit {
+    display: none;
+  }
+  .side_menu_area .side_menu {
+    margin-top: 0;
+    background: #fff;
+  }
+  .side_menu_area .side_menu > ol > li:not(.on) {
+    display: none;
+  }
+  .side_menu_area .side_menu > ol > li {
+    padding-bottom: 0;
+    font-size: 0;
+  }
+  .side_menu_area .side_menu > ol > li > a,
+  .side_menu_area .side_menu > ol > li > ol {
+    padding-left: 0;
+  }
+  .side_menu_area .side_menu > ol > li > a {
+    height: 80px;
+    line-height: 75px;
+    padding-right: 25px;
+    font-size: 0;
+    border-bottom: 5px solid #eee;
+  }
+  .side_menu_area .side_menu > ol > li > a:before {
+    font-size: 26px;
+    color: #081121;
+    font-weight: 600;
+    letter-spacing: -1px;
+    content: attr(data-tit);
+  }
+  .side_menu_area .side_menu > ol > li > a.toggle_link:after {
+    right: 4px;
+    border-left-width: 6px;
+    border-right-width: 6px;
+    border-top-width: 10px;
+  }
+  .side_menu_area.fixed .side_menu {
+    position: fixed;
     top: 110px;
-    margin: 0 -50px;
+    left: 0;
+    right: 0;
+    padding: 0 50px;
+  }
+  .side_menu_area .side_d2 {
+    position: absolute;
+    left: 0;
+    top: 80px;
+    right: 0;
+    background: #fff;
+    border-bottom: 1px solid #eee;
+    *zoom: 1;
+  }
+  .side_menu_area .side_d2:after {
+    display: block;
+    clear: both;
+    content: "";
+  }
+  .side_menu_area .side_d2:before,
+  .side_menu_area .side_d2:after {
+    height: 15px;
+  }
+  .side_menu_area .side_d2 li:before {
+    left: 10px;
+  }
+  .side_menu_area .side_d2 li.on:after {
+    left: 0;
+  }
+  .side_menu_area .side_d2 li a {
+    padding: 0 10px 0 44px;
+  }
+  .content_area h1 {
+    overflow: hidden;
+    display: inline-block;
+    position: absolute;
+    margin: -1px;
+    width: 1px;
+    height: 1px;
+    border: 0;
+    line-height: 1;
+    clip: rect(1px, 1px, 1px, 1px);
+    clip-path: inset(50%);
+  }
+}
+@media (max-width: 767px) {
+  .sub_content {
+    padding-top: 0;
+    padding-bottom: 50px;
+  }
+  .side_menu_area {
+    min-height: 50px;
+    margin: 0 -10px;
+    padding: 0 10px;
+  }
+  .side_menu_area .side_menu > ol > li > a {
+    height: 50px;
+    line-height: 46px;
+    padding-right: 0;
+    text-align: center;
+    border-bottom-width: 3px;
+  }
+  .side_menu_area .side_menu > ol > li > a:before {
+    font-size: 16px;
+    font-weight: 500;
+    color: #666;
+    letter-spacing: -1px;
+  }
+  .side_menu_area .side_menu > ol > li > a.toggle_link:after {
+    position: static;
+    display: inline-block;
+    vertical-align: top;
+    margin: 23px 0 0 6px;
+    border-left-width: 4px;
+    border-right-width: 4px;
+    border-top-width: 6px;
+  }
+  .side_menu_area .side_menu > ol > li:nth-child(5) li {
+    float: left;
+    width: 50%;
+  }
+  .side_menu_area.fixed .side_menu {
+    top: 60px;
+    padding: 0 10px;
+  }
+  .side_menu_area.fixed .side_menu > ol > li > a:before {
+    color: #081121;
+  }
+  .side_menu_area .side_d2 {
+    top: 50px;
+  }
+}
+@media (max-width: 360px) {
+  .side_menu_area .side_menu > ol > li > a:before {
+    font-size: 14px;
   }
 }
 .content_area h1 {
-  height: 30px;
-  line-height: 30px;
-  background: rgba(30, 115, 255, 0.1);
+  line-height: 34px;
+  font-size: 30px;
+  color: #081121;
+  letter-spacing: -1px;
+}
+.content_area h1:before {
+  content: attr(data-number);
+}
+.content_area h2 {
+  float: left;
+  line-height: 28px;
+  font-size: 24px;
+  color: #081121;
+  letter-spacing: -1px;
+}
+.content_area h2:before {
+  content: attr(data-number);
 }
 .uk_course {
+  *zoom: 1;
   padding-top: 50px;
+  padding-bottom: 50px;
+  border-bottom: 1px solid #eee;
 }
-.uk_course:first-child {
-  padding-top: 0;
+.uk_course:after {
+  display: block;
+  clear: both;
+  content: "";
+}
+.uk_course:before {
+  display: inline-block;
+  vertical-align: top;
+  height: 22px;
+  line-height: 21px;
+  margin: 4px 0 0 12px;
+  padding: 0 15px;
+  font-size: 12px;
+  color: #666;
+  background: #eee;
+  border-radius: 100px;
+  content: "Last Updated on " attr(data-last-update);
+}
+.uk_note {
+  line-height: 20px;
+  margin-top: 30px;
+  padding: 22px 30px;
+  font-size: 14px;
+  color: #4b6da5;
+  letter-spacing: -0.5px;
+  font-weight: 400;
+  background: #f9f9f9;
+  border-left: 5px solid #1e73ff;
+}
+.uk_note p {
+  margin-top: 5px;
+}
+.uk_note p:first-child,
+.uk_note h2 + p,
+.uk_note h3 + p {
+  margin-top: 0;
+}
+.ol_lst {
+  margin-top: 30px;
+}
+@media (max-width: 767px) {
+  .content_area h2 {
+    float: none;
+    line-height: 22px;
+    font-size: 18px;
+  }
+  .uk_course {
+    padding-top: 27px;
+    padding-bottom: 25px;
+  }
+  .uk_course:before {
+    display: none;
+  }
 }
 /*
-.touchflow-scrollbar { background:rgba(0,0,0,0.1); transition:300ms; position:absolute; bottom:0; right:0; overflow:hidden; }
-.touchflow-scrollbar div { background:rgba(0,0,0,0.3); position:absolute; top:0; left:0; }
+
+.sub_top {
+	position:relative; text-align:center;
+	padding:110px 0 55px;
+	border-bottom:1px solid #eee;
+
+	.tit {
+		display:inline-block; position:relative; z-index:1;
+		line-height:80px; padding-top:5px;
+		.font-en; font-size:38px; font-weight:800; color:@navy;
+		letter-spacing:-1px;
+		&:before {
+			position:absolute; left:0; top:0; right:0;
+			height:4px; background:#eee;
+			content:"";
+		}
+	}
+	.top_link {
+		display:block; height:1px;
+		ul {
+			position:absolute; left:@pc_padding; right:@pc_padding; top:40px;
+			font-size:0;
+			li {
+				display:inline-block; position:relative; padding-left:3px;
+				&:before {
+					position:absolute; left:0; top:50%;
+					width:3px; height:3px; margin-top:-2px;
+					background:#444; border-radius:100%;
+					content:"";
+				}
+				&:first-child {padding-left:0;}
+				&:first-child:before {display:none;}
+
+				a {
+					display:block;
+					line-height:36px; padding:0 15px;
+					font-size:18px; color:fade(@navy, 85%);
+					font-weight:400; letter-spacing:-0.3px;
+					transition:color .15s;
+				}
+				i {display:block; position:relative; z-index:1;}
+				&:hover a, &.on a {color:darken(@blue, 5%);}
+				&.on a {font-weight:600;}
+				&.on i:before {
+					position:absolute; left:-3px; right:-3px; bottom:5px; z-index:-1;
+					height:12px; background:@yellow; border-radius:3px;
+					content:"";
+				}
+			}
+		}
+	}
+	.inner {
+		display:inline-block;
+		&:before {display:block; height:1px; content:"";}
+	}
+	.common_info, .top_info {
+		line-height:22px;
+		font-size:14px; color:#666; font-weight:400;
+		letter-spacing:-0.5px;
+	}
+	.top_info {
+		text-align:left;
+		margin-top:15px; padding:13px 18px;
+		background:#f3f3f3;
+		li {
+			position:relative;
+			padding-left:10px; color:#444;
+			&:before {
+				position:absolute; left:0; top:10px;
+				width:3px; height:3px;
+				font-weight:bold;
+				background:#777; border-radius:100%;
+				content:"";
+				//content:"·";
+			}
+		}
+	}
+}
+@media(max-width:@screen-sm-max){
+	.sub_top {
+		padding:60px 0 20px;
+
+		.tit {
+			line-height:36px; padding-top:0;
+			font-size:30px; font-weight:800;
+			letter-spacing:-1px;
+			&:before {
+
+				left:50%; right:auto; z-index:-1; transform:translate(-50%, 0);
+				height:0;
+				border-left:80px solid transparent;
+				border-right:80px solid transparent;
+				border-top:36px solid #eee;
+				background:transparent;
+			}
+		}
+		.top_link {
+			ul {
+				left:0; right:0; top:13px;
+				li {
+					padding-left:2px;
+					&:before {width:2px; height:2px; margin-top:-1px;}
+
+					a {
+						line-height:33px; padding:0 6px;
+						font-size:13px; font-weight:500;
+					}
+					&:hover a {color:fade(@navy, 85%)}
+					&.on i:before {bottom:5px; height:10px;}
+				}
+			}
+		}
+		.inner {display:none;}
+	}
+}
+
+//sub content common
+@course_padding:50px;
+.sub_content {.clear; padding-top:@course_padding; padding-bottom:100px;}
+.content_area {.rgt; width:calc(100% - (250px + 60px));} //padding-left:60px;
+.side_menu_area {.lft; width:250px;}
+.side_menu_area {
+	position:sticky; top:@hdHeight + @course_padding;
+
+	.tit {
+		line-height:130%; padding:4px 0 10px;
+		.font-en; font-size:18px; color:#777; font-weight:600; letter-spacing:-1px;
+		border-bottom:5px solid #eee;
+		b, i {display:inline-block;}
+		b {color:@navy; font-weight:800;}
+	}
+	li {line-height:20px; font-size:14px; color:#888;}
+	a {
+		display:block; position:relative; z-index:1;
+		color:#888; font-weight:400; letter-spacing:-0.5px;
+	}
+	ol {
+		counter-reset:lst_number;
+		li {position:relative; counter-increment:lst_number;}
+		li:before {
+			position:absolute; left:0; top:0; z-index:2;
+			content:counters(lst_number, ".") ". ";
+		}
+		//.side_d2 li:before {top:50%; line-height:20px;  margin-top:-10px;}
+	}
+	.side_menu {position:relative; margin-top:20px;}
+	.side_menu > ol > li {
+		padding-bottom:8px;
+		> a, > ol {padding-left:22px;}
+		> a {padding-right:15px;}
+		&:hover > a, &.on, &.on > a {color:@blue;}
+
+		> a.toggle_link:after {
+			position:absolute; right:0; top:50%; transform:translate(0, -50%);
+			border-left:4px solid transparent;
+			border-right:4px solid transparent;
+			border-top:6px solid #ccc;
+			content:"";
+		}
+		&.tg_on > a.toggle_link:after {
+			border-top:0;
+			border-bottom:6px solid @blue;
+		}
+	}
+	.side_d2 {
+		.clear;
+		display:none; //padding-bottom:5px;
+		&:before {display:block; width:100%; height:5px; content:"";}
+		li {
+			font-size:13px;
+			a {padding-left:32px;}
+			a, b {color:#444; font-weight:400;}
+			i {color:#888; font-weight:300;}
+			p {color:#aaa; font-weight:400;}
+			.html5 {
+				margin:4px 0 0 4px; font-size:0;
+				&:before {font-size:14px;}
+			}
+			&:hover {
+				a, b, i, p {color:@blue;}
+			}
+			&.on {
+				color:@blue;
+				!*&:after {
+					position:absolute; left:-15px; top:6px; z-index:2;
+					width:6px; height:6px; background:@blue; border-radius:100%;
+					content:"";
+				}*!
+				&:after {
+					position:absolute; left:-10px; top:3px; bottom:3px; z-index:2;
+					width:3px; background:@blue;
+					content:"";
+				}
+				a, b, i, p {color:@blue;}
+			}
+		}
+	}
+	.on .side_d2 {display:block;}
+}
+@media(max-width:@screen-md-max){
+	.content_area, .side_menu_area {float:none; width:auto;}
+	.side_menu_area {
+		@a_size:60px;
+		position:static; min-height:@a_size;
+
+		.tit {display:none;}
+		.side_menu {margin-top:0; background:#fff;}
+		&.fixed .side_menu {
+			position:fixed; top:@hdHeight; left:0; right:0;
+			padding:0 @pc_padding;
+		}
+		.side_menu > ol > li:not(.on) {display:none;}
+		.side_menu > ol > li {
+			padding-bottom:0; font-size:0;
+			> a, > ol {padding-left:0;}
+			> a {
+				height:@a_size; line-height:@a_size; padding-right:15px;
+				font-size:0;
+				border-bottom:5px solid #eee;
+				&:before {
+					font-size:20px; color:@navy; font-weight:600;
+					content:attr(data-tit);
+				}
+			}
+		}
+		.side_d2 {
+			position:absolute; left:0; top:@a_size; right:0;
+			background:#fff; border-bottom:1px solid #eee;
+			.clear;
+			&:before, &:after {height:15px;}
+			li {
+				&:before {left:10px;}
+				&.on:after {left:0;}
+				a {padding:0 10px 0 44px;}
+			}
+		}
+	}
+}
+@media(max-width:@screen-sm-max){
+	.side_menu_area {
+		@a_size:50px;
+		min-height:@a_size;
+
+		&.fixed .side_menu {top:@hdHeightMb; padding:0 10px;}
+		.side_menu > ol > li {
+			> a {
+				height:@a_size; line-height:@a_size; padding-right:25px;
+				border-bottom-width:3px;
+				&:before {font-size:16px; letter-spacing:-1px;}
+				&.toggle_link:after {right:10px;}
+			}
+		}
+		.side_menu > ol > li:nth-child(5) li {.lft; width:50%;}
+		.side_d2 {top:@a_size;}
+	}
+}
+@media(max-width:@screen-xxs){
+	.side_menu_area {
+		.side_menu > ol > li > a:before {font-size:14px;}
+	}
+}
+
+//content_area
+.content_area {
+	h1 {line-height:34px; font-size:30px; color:@navy; letter-spacing:-1px;}
+	h1:before {content:attr(data-number);}
+	h2 {.lft; line-height:28px; font-size:24px; color:@navy; letter-spacing:-1px;}
+	h2:before {content:attr(data-number);}
+	//h2:after {content:"Last Updated on "attr(data-last-update);}
+}
+.uk_course {
+	.clear; padding-top:@course_padding;
+	&:before {
+		display:inline-block; vertical-align:top;
+		height:22px; line-height:21px; margin:4px 0 0 12px; padding:0 15px;
+		font-size:12px; color:#666;
+		background:#eee; border-radius:100px;
+		content:"Last Updated on "attr(data-last-update);
+	}
+}
 */
 /*# sourceMappingURL=uk.css.map */
