--- a/assets/lib/css/less/layout.less
+++ b/assets/lib/css/less/layout.less
@@ -806,10 +806,15 @@
 	.desktop.hd_search_on {
 		body {margin-right:17px;}
 		.uk_header {right:17px;}
-		&.opera {margin-right:15px;}
+		&.md_state .side_menu_area.fixed .side_menu {right:17px;}
+
+		&.opera body {margin-right:15px;}
 		&.opera .uk_header {right:15px;}
-		&.edge {margin-right:16px;}
+		&.opera.md_state .side_menu_area.fixed .side_menu {right:15px;}
+
+		&.edge body {margin-right:16px;}
 		&.edge .uk_header {right:16px;}
+		&.edge.md_state .side_menu_area.fixed .side_menu {right:16px;}
 	}
 
 	//작업용(사이트맵 완료 후 삭제)
@@ -1578,7 +1583,6 @@
 	}
 
 
-	@course_padding:50px;
 	//sub top
 	.sub_top {
 		position:relative; text-align:center;
@@ -1659,29 +1663,27 @@
 	}
 	@media(max-width:@screen-sm-max){
 		.sub_top {
-			padding:60px 0 20px;
+			padding:50px 0 0; border:0;
 
 			.tit {
 				line-height:36px; padding-top:0;
 				font-size:30px; font-weight:800;
 				letter-spacing:-1px;
 				&:before {
-
 					left:50%; right:auto; z-index:-1; transform:translate(-50%, 0);
 					height:0;
-					border-left:80px solid transparent;
-					border-right:80px solid transparent;
+					border-left:90px solid transparent;
+					border-right:90px solid transparent;
 					border-top:36px solid #eee;
 					background:transparent;
 				}
 			}
 			.top_link {
 				ul {
-					left:0; right:0; top:13px;
+					left:0; right:0; top:8px;
 					li {
 						padding-left:2px;
 						&:before {width:2px; height:2px; margin-top:-1px;}
-
 						a {
 							line-height:33px; padding:0 6px;
 							font-size:13px; font-weight:500;
@@ -1696,20 +1698,20 @@
 	}
 
 	//sub content common
-	.sub_content {.clear; padding-top:50px; padding-bottom:100px;}
-	.content_area {.rgt; width:calc(100% - (250px + 60px));} //padding-left:60px;
+	@course_padding:50px;
+	.sub_content {.clear; padding-top:@course_padding; padding-bottom:100px;}
 	.side_menu_area {.lft; width:250px;}
 	.side_menu_area {
 		position:sticky; top:@hdHeight + @course_padding;
 
-		.tit { //background:fade(red, 10%);
-			line-height:130%; padding-bottom:10px;
+		.tit {
+			line-height:130%; padding:4px 0 10px;
 			.font-en; font-size:18px; color:#777; font-weight:600; letter-spacing:-1px;
 			border-bottom:5px solid #eee;
 			b, i {display:inline-block;}
 			b {color:@navy; font-weight:800;}
 		}
-		li {line-height:18px; font-size:14px; color:#888;}
+		li {line-height:20px; font-size:14px; color:#888;}
 		a {
 			display:block; position:relative; z-index:1;
 			color:#888; font-weight:400; letter-spacing:-0.5px;
@@ -1723,14 +1725,9 @@
 			}
 			//.side_d2 li:before {top:50%; line-height:20px;  margin-top:-10px;}
 		}
-		.side_menu {
-			position:relative; overflow:hidden;
-			margin-top:30px;
-			//max-height:calc(100vh - (@hdHeight + 166px)); padding-right:20px;
-			//overflow-y:scroll;
-		}
+		.side_menu {position:relative; margin-top:20px;}
 		.side_menu > ol > li {
-			padding-bottom:10px;
+			padding-bottom:8px;
 			> a, > ol {padding-left:22px;}
 			> a {padding-right:15px;}
 			&:hover > a, &.on, &.on > a {color:@blue;}
@@ -1748,7 +1745,8 @@
 			}
 		}
 		.side_d2 {
-			display:none; padding-bottom:5px;
+			.clear;
+			display:none; //padding-bottom:5px;
 			&:before {display:block; width:100%; height:5px; content:"";}
 			li {
 				font-size:13px;
@@ -1757,7 +1755,7 @@
 				i {color:#888; font-weight:300;}
 				p {color:#aaa; font-weight:400;}
 				.html5 {
-					margin:3px 0 0 4px; font-size:0;
+					margin:4px 0 0 4px; font-size:0;
 					&:before {font-size:14px;}
 				}
 				&:hover {
@@ -1781,44 +1779,417 @@
 		}
 		.on .side_d2 {display:block;}
 	}
-
+	.content_area {.rgt; width:calc(100% - (250px + 60px));}
 	@media(max-width:@screen-md-max){
-		.content_area, .side_menu_area {float:none; width:auto;}
+		.sub_content {padding-top:25px;}
+		.side_menu_area, .content_area {float:none; width:auto;}
 		.side_menu_area {
-			top:@hdHeight; margin:0 -@pc_padding;
+			@a_size:80px;
+			position:static; min-height:@a_size;
+
+			.tit {display:none;}
+			.side_menu {margin-top:0; background:#fff;}
+			.side_menu > ol > li:not(.on) {display:none;}
+			.side_menu > ol > li {
+				padding-bottom:0; font-size:0;
+				> a, > ol {padding-left:0;}
+				> a {
+					height:@a_size; line-height:@a_size - 5px; padding-right:25px;
+					font-size:0;
+					border-bottom:5px solid #eee;
+					&:before {
+						font-size:26px; color:@navy; font-weight:600; letter-spacing:-1px;
+						content:attr(data-tit);
+					}
+				}
+				> a.toggle_link:after {
+					right:4px;
+					border-left-width:6px;
+					border-right-width:6px;
+					border-top-width:10px;
+				}
+			}
+			&.fixed .side_menu {
+				position:fixed; top:@hdHeight; left:0; right:0;
+				padding:0 @pc_padding;
+			}
+			.side_d2 {
+				position:absolute; left:0; top:@a_size; right:0;
+				background:#fff; border-bottom:1px solid #eee;
+				.clear;
+				&:before, &:after {height:15px;}
+				li {
+					&:before {left:10px;}
+					&.on:after {left:0;}
+					a {padding:0 10px 0 44px;}
+				}
+			}
+		}
+		.content_area h1 {.sound_only;}
+	}
+	@media(max-width:@screen-sm-max){
+		.sub_content {padding-top:0; padding-bottom:50px;}
+		.side_menu_area {
+			@a_size:50px;
+			min-height:@a_size; margin:0 -10px; padding:0 10px;
+
+			.side_menu > ol > li {
+				> a {
+					height:@a_size; line-height:@a_size - 4px; padding-right:0;
+					text-align:center;
+					border-bottom-width:3px;
+					&:before {font-size:16px; font-weight:500; color:#666; letter-spacing:-1px;}
+				}
+				> a.toggle_link:after {
+					position:static; display:inline-block; vertical-align:top;
+					margin:23px 0 0 6px;
+					border-left-width:4px;
+					border-right-width:4px;
+					border-top-width:6px;
+				}
+			}
+			.side_menu > ol > li:nth-child(5) li {.lft; width:50%;}
+			&.fixed .side_menu {
+				top:@hdHeightMb; padding:0 10px;
+				> ol > li > a:before {color:@navy;}
+			}
+			.side_d2 {top:@a_size;}
+		}
+	}
+	@media(max-width:@screen-xxs){
+		.side_menu_area {
+			.side_menu > ol > li > a:before {font-size:14px;}
 		}
 	}
 
-	@media(max-width:@screen-sm-max){
-
-	}
 
 
-	//content_area
+	//content_area setting
 	.content_area {
-		h1 {height:30px; line-height:30px; background:fade(@blue, 10%);}
+		h1 {line-height:34px; font-size:30px; color:@navy; letter-spacing:-1px;}
+		h1:before {content:attr(data-number);}
+		h2 {.lft; line-height:28px; font-size:24px; color:@navy; letter-spacing:-1px;}
+		h2:before {content:attr(data-number);}
+		//h2:after {content:"Last Updated on "attr(data-last-update);}
 	}
-
-
-
-
-
 	.uk_course {
-		padding-top:@course_padding;
-		&:first-child {padding-top:0;}
+		.clear; padding-top:@course_padding; padding-bottom:@course_padding;
+		border-bottom:1px solid #eee;
+		&:before {
+			display:inline-block; vertical-align:top;
+			height:22px; line-height:21px; margin:4px 0 0 12px; padding:0 15px;
+			font-size:12px; color:#666;
+			background:#eee; border-radius:100px;
+			content:"Last Updated on "attr(data-last-update);
+		}
+	}
+	.uk_note {
+		line-height:20px; margin-top:30px; padding:22px 30px;
+		font-size:14px; color:#4b6da5; letter-spacing:-0.5px; font-weight:400;
+		background:#f9f9f9; border-left:5px solid @blue;
+		p {margin-top:5px;}
+		p:first-child, h2 + p, h3 + p {margin-top:0;}
+	}
+	.ol_lst {
+		margin-top:30px;
+	}
+	@media(max-width:@screen-sm-max){
+		.content_area {
+			h2 {float:none; line-height:22px; font-size:18px;}
+		}
+		.uk_course {
+			padding-top:27px; padding-bottom:25px;
+			&:before {display:none;}
+		}
 	}
 
 
 
 
 
+//sub top , sub content common bakup
 /*
-.touchflow-scrollbar { background:rgba(0,0,0,0.1); transition:300ms; position:absolute; bottom:0; right:0; overflow:hidden; }
-.touchflow-scrollbar div { background:rgba(0,0,0,0.3); position:absolute; top:0; left:0; }
+
+.sub_top {
+	position:relative; text-align:center;
+	padding:110px 0 55px;
+	border-bottom:1px solid #eee;
+
+	.tit {
+		display:inline-block; position:relative; z-index:1;
+		line-height:80px; padding-top:5px;
+		.font-en; font-size:38px; font-weight:800; color:@navy;
+		letter-spacing:-1px;
+		&:before {
+			position:absolute; left:0; top:0; right:0;
+			height:4px; background:#eee;
+			content:"";
+		}
+	}
+	.top_link {
+		display:block; height:1px;
+		ul {
+			position:absolute; left:@pc_padding; right:@pc_padding; top:40px;
+			font-size:0;
+			li {
+				display:inline-block; position:relative; padding-left:3px;
+				&:before {
+					position:absolute; left:0; top:50%;
+					width:3px; height:3px; margin-top:-2px;
+					background:#444; border-radius:100%;
+					content:"";
+				}
+				&:first-child {padding-left:0;}
+				&:first-child:before {display:none;}
+
+				a {
+					display:block;
+					line-height:36px; padding:0 15px;
+					font-size:18px; color:fade(@navy, 85%);
+					font-weight:400; letter-spacing:-0.3px;
+					transition:color .15s;
+				}
+				i {display:block; position:relative; z-index:1;}
+				&:hover a, &.on a {color:darken(@blue, 5%);}
+				&.on a {font-weight:600;}
+				&.on i:before {
+					position:absolute; left:-3px; right:-3px; bottom:5px; z-index:-1;
+					height:12px; background:@yellow; border-radius:3px;
+					content:"";
+				}
+			}
+		}
+	}
+	.inner {
+		display:inline-block;
+		&:before {display:block; height:1px; content:"";}
+	}
+	.common_info, .top_info {
+		line-height:22px;
+		font-size:14px; color:#666; font-weight:400;
+		letter-spacing:-0.5px;
+	}
+	.top_info {
+		text-align:left;
+		margin-top:15px; padding:13px 18px;
+		background:#f3f3f3;
+		li {
+			position:relative;
+			padding-left:10px; color:#444;
+			&:before {
+				position:absolute; left:0; top:10px;
+				width:3px; height:3px;
+				font-weight:bold;
+				background:#777; border-radius:100%;
+				content:"";
+				//content:"·";
+			}
+		}
+	}
+}
+@media(max-width:@screen-sm-max){
+	.sub_top {
+		padding:60px 0 20px;
+
+		.tit {
+			line-height:36px; padding-top:0;
+			font-size:30px; font-weight:800;
+			letter-spacing:-1px;
+			&:before {
+
+				left:50%; right:auto; z-index:-1; transform:translate(-50%, 0);
+				height:0;
+				border-left:80px solid transparent;
+				border-right:80px solid transparent;
+				border-top:36px solid #eee;
+				background:transparent;
+			}
+		}
+		.top_link {
+			ul {
+				left:0; right:0; top:13px;
+				li {
+					padding-left:2px;
+					&:before {width:2px; height:2px; margin-top:-1px;}
+
+					a {
+						line-height:33px; padding:0 6px;
+						font-size:13px; font-weight:500;
+					}
+					&:hover a {color:fade(@navy, 85%)}
+					&.on i:before {bottom:5px; height:10px;}
+				}
+			}
+		}
+		.inner {display:none;}
+	}
+}
+
+//sub content common
+@course_padding:50px;
+.sub_content {.clear; padding-top:@course_padding; padding-bottom:100px;}
+.content_area {.rgt; width:calc(100% - (250px + 60px));} //padding-left:60px;
+.side_menu_area {.lft; width:250px;}
+.side_menu_area {
+	position:sticky; top:@hdHeight + @course_padding;
+
+	.tit {
+		line-height:130%; padding:4px 0 10px;
+		.font-en; font-size:18px; color:#777; font-weight:600; letter-spacing:-1px;
+		border-bottom:5px solid #eee;
+		b, i {display:inline-block;}
+		b {color:@navy; font-weight:800;}
+	}
+	li {line-height:20px; font-size:14px; color:#888;}
+	a {
+		display:block; position:relative; z-index:1;
+		color:#888; font-weight:400; letter-spacing:-0.5px;
+	}
+	ol {
+		counter-reset:lst_number;
+		li {position:relative; counter-increment:lst_number;}
+		li:before {
+			position:absolute; left:0; top:0; z-index:2;
+			content:counters(lst_number, ".") ". ";
+		}
+		//.side_d2 li:before {top:50%; line-height:20px;  margin-top:-10px;}
+	}
+	.side_menu {position:relative; margin-top:20px;}
+	.side_menu > ol > li {
+		padding-bottom:8px;
+		> a, > ol {padding-left:22px;}
+		> a {padding-right:15px;}
+		&:hover > a, &.on, &.on > a {color:@blue;}
+
+		> a.toggle_link:after {
+			position:absolute; right:0; top:50%; transform:translate(0, -50%);
+			border-left:4px solid transparent;
+			border-right:4px solid transparent;
+			border-top:6px solid #ccc;
+			content:"";
+		}
+		&.tg_on > a.toggle_link:after {
+			border-top:0;
+			border-bottom:6px solid @blue;
+		}
+	}
+	.side_d2 {
+		.clear;
+		display:none; //padding-bottom:5px;
+		&:before {display:block; width:100%; height:5px; content:"";}
+		li {
+			font-size:13px;
+			a {padding-left:32px;}
+			a, b {color:#444; font-weight:400;}
+			i {color:#888; font-weight:300;}
+			p {color:#aaa; font-weight:400;}
+			.html5 {
+				margin:4px 0 0 4px; font-size:0;
+				&:before {font-size:14px;}
+			}
+			&:hover {
+				a, b, i, p {color:@blue;}
+			}
+			&.on {
+				color:@blue;
+				!*&:after {
+					position:absolute; left:-15px; top:6px; z-index:2;
+					width:6px; height:6px; background:@blue; border-radius:100%;
+					content:"";
+				}*!
+				&:after {
+					position:absolute; left:-10px; top:3px; bottom:3px; z-index:2;
+					width:3px; background:@blue;
+					content:"";
+				}
+				a, b, i, p {color:@blue;}
+			}
+		}
+	}
+	.on .side_d2 {display:block;}
+}
+@media(max-width:@screen-md-max){
+	.content_area, .side_menu_area {float:none; width:auto;}
+	.side_menu_area {
+		@a_size:60px;
+		position:static; min-height:@a_size;
+
+		.tit {display:none;}
+		.side_menu {margin-top:0; background:#fff;}
+		&.fixed .side_menu {
+			position:fixed; top:@hdHeight; left:0; right:0;
+			padding:0 @pc_padding;
+		}
+		.side_menu > ol > li:not(.on) {display:none;}
+		.side_menu > ol > li {
+			padding-bottom:0; font-size:0;
+			> a, > ol {padding-left:0;}
+			> a {
+				height:@a_size; line-height:@a_size; padding-right:15px;
+				font-size:0;
+				border-bottom:5px solid #eee;
+				&:before {
+					font-size:20px; color:@navy; font-weight:600;
+					content:attr(data-tit);
+				}
+			}
+		}
+		.side_d2 {
+			position:absolute; left:0; top:@a_size; right:0;
+			background:#fff; border-bottom:1px solid #eee;
+			.clear;
+			&:before, &:after {height:15px;}
+			li {
+				&:before {left:10px;}
+				&.on:after {left:0;}
+				a {padding:0 10px 0 44px;}
+			}
+		}
+	}
+}
+@media(max-width:@screen-sm-max){
+	.side_menu_area {
+		@a_size:50px;
+		min-height:@a_size;
+
+		&.fixed .side_menu {top:@hdHeightMb; padding:0 10px;}
+		.side_menu > ol > li {
+			> a {
+				height:@a_size; line-height:@a_size; padding-right:25px;
+				border-bottom-width:3px;
+				&:before {font-size:16px; letter-spacing:-1px;}
+				&.toggle_link:after {right:10px;}
+			}
+		}
+		.side_menu > ol > li:nth-child(5) li {.lft; width:50%;}
+		.side_d2 {top:@a_size;}
+	}
+}
+@media(max-width:@screen-xxs){
+	.side_menu_area {
+		.side_menu > ol > li > a:before {font-size:14px;}
+	}
+}
+
+//content_area
+.content_area {
+	h1 {line-height:34px; font-size:30px; color:@navy; letter-spacing:-1px;}
+	h1:before {content:attr(data-number);}
+	h2 {.lft; line-height:28px; font-size:24px; color:@navy; letter-spacing:-1px;}
+	h2:before {content:attr(data-number);}
+	//h2:after {content:"Last Updated on "attr(data-last-update);}
+}
+.uk_course {
+	.clear; padding-top:@course_padding;
+	&:before {
+		display:inline-block; vertical-align:top;
+		height:22px; line-height:21px; margin:4px 0 0 12px; padding:0 15px;
+		font-size:12px; color:#666;
+		background:#eee; border-radius:100px;
+		content:"Last Updated on "attr(data-last-update);
+	}
+}
 */
-
-
-
 
 
 
